Resolve stash pop conflict and clean up node_modules cache

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 
   "private": true,
 
-  "homepage": "https://ShaheenRTirlpur.github.io/assessment",
+  "homepage": "https://shaheenrtirlpur.github.io/assessment",
 
   "scripts": {
 
